--- a/wiki/SNPCalling.wiki
+++ b/wiki/SNPCalling.wiki
@@ -1,4 +1,5 @@
 #summary One-sentence summary of this page.
+#labels Featured
 
 = Iterative SNP Calling with ComB =
 
@@ -41,11 +42,3 @@ that SNPs have at least 10 reads covering and a mismatch threshold of 0.5. The p
 
 
 
-
-
-
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki page
