Edited wiki page Manual through web user interface.

--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -53,6 +53,7 @@ For example:
 || *-o* || _filepath_ || Name of mapping output file when mapping a single read set. The output file format will be either the .mapping tab delimited text format or the SAM format as determined by the extension of the output filename. For example {{{-o out.sam}}} will output in SAM format; {{{-o /path/to/out.mapping}}} will output in .mapping format. Use *--outputFormat* to override this behavior. The *-o* option does not apply when multiple reads sets are being mapped at once to take advantage of multiple CPUs (cores); see the *-d* option for that case. ||
 || *-d* || _dirpath_ || Output directory for mapping output files when mapping multiple read sets (output files will be named automatically). If the directory specified does not exist, the output directory will be created provided the parent directory exists. If the *-d* switch is not specified, files will be written to the directory PerM is run from. Note: if -d _filepath_ is specified when mapping a single read set, _dirpath_ will be prepended to _filepath_; however, this usage is not recommended. ||
 || *-a* || _filepath_ || Create a FASTA (FASTQ) file for reads mapped to more positions than the threshold specified by -k or the default of 200. ||
+|| *-b* || _filepath_ || Create a FASTA (FASTQ) file for reads that is shorter than expected length or with strange characters. ||
 || *-u* || _filepath_ || Create a FASTA (FASTAQ) file of unmapped reads. When a single read set is mapped, _filename_ specifies the name of the output file. When multiple read sets are mapped, _filename_ is irrelevant and should be omitted; the files of unmapped sequences will automatically be named and created in the directory PerM is run from. ||
 
 ====Long Options====
