Edited wiki page Input through web user interface.

--- a/wiki/Input.wiki
+++ b/wiki/Input.wiki
@@ -36,7 +36,8 @@ Use the {{{-s}}}, {{{-s /some/directory}}}, or {{{-s /path/to/your/filename.inde
 Note: OS limitations may limit the maximum length of a file name or file path.
 
 ==Read Files==
-PerM expects reads from either the SOLiD or Solexa sequencer. PerM guesses the read file format according to the first read file's extension, ex: .fasta, .fastq, .csfasta, .csfastq. Or the format can be specified explicitly via {{{--readFormat fasta}}}, {{{--readFormat fastq}}}, {{{--readFormat csfasta}}}, or {{{--readFormat csfastq}}} when the input files have a non-standard extension. The read length is automatically detected for the first read. The reads file format and the read length are assumed to be the same for all read files and all reads.
+PerM expects reads from either the SOLiD or Solexa sequencer. PerM guesses the read file format according to the first read file's extension, ex: .fasta, .fastq, .csfasta, .csfastq. Or the format can be specified explicitly via {{{--readFormat fasta}}}, {{{--readFormat fastq}}}, {{{--readFormat csfasta}}}, or {{{--readFormat csfastq}}} when the input files have a non-standard extension. The read length is automatically detected for the first read. The reads file format and the read length are assumed to be the same for all read files and all reads. When a read is longer than the length of the first read, PerM truncates the read into the expected length. When a read is shorter than the length of the first reads, the reads will be ignored. In version 4.0, a warning message will be shown for a shorter read. Users can use a newly added option -b, to extract reads shorter than expected. Alternatively, a bash command similar to 
+"grep -B 1 -A 2 '^[ACGTacgt]\{50\}$' input.fastq > read50.fastq" can also help users easily extract read with length 50 from a fastq file with reads in multiple lengths. 
 
 ==== SOLiD read quality ====
 For SOLiD reads in csfasta format, PerM will try to read the file with the same basename as the read set with the corresponding ".qual" extension for the quality scores. That is, if the read file name is *7B.csfasta*, its quality file *7B.qual* should be put in the same directory. If quality score file is not available, or the reads and quality scores can't be matched, only the read sequences will be used. 
