--- a/wiki/RecentUpdated.wiki
+++ b/wiki/RecentUpdated.wiki
@@ -1,3 +1,3 @@
 = Recent updates =
-* Please download the latest version especially if you encounter similar issues that has been reported and fixed.*
+* Please download the latest version especially if you encounter similar issues that have been reported and fixed.*
  
