--- a/wiki/Output.wiki
+++ b/wiki/Output.wiki
@@ -66,6 +66,8 @@ For Illumina reads with quality scores (FASTAQ file), Windows users can use the 
   * Category. This is the flag defined by ABI, which is a three letter alphabet. 
   see [http://www3.appliedbiosystems.com/cms/groups/mcb_marketing/documents/generaldocuments/cms_058718.pdf Here 2.2.9 c] to get detail info. 
 
+One can use option *--printRefSeq* to print out the mapped paired reference sequence for Illumina paired reads as the extra two columns.
+
 == Unmapped reads ==
 
 When the *-u* flag is specified, PerM will output the unmapped reads. The format is FASTA or FASTQ, depending on whether the quality score is available. I need to add the .csfasta format in the near future. Note the paired-end mapping result of the SAM format includes the mapped single-end. 
