--- a/wiki/Output.wiki
+++ b/wiki/Output.wiki
@@ -64,11 +64,14 @@ For Illumina reads with quality scores (FASTAQ file), Windows users can use the 
   * The position of the the 1st read mapped to.
   * The position of the the 2nd read mapped to.
 
-  # Category. This is the flag defined by ABI, which is a three letter alphabet. 
-  # see  [http://www3.appliedbiosystems.com/cms/groups/mcb_marketing/documents/generaldocuments/cms_058718.pdf Here 2.2.9 c] to get detail info. 
-
 One can use option *--printRefSeq* to print out the mapped paired reference sequence for Illumina paired reads as the extra two columns.
+  * The reference sequences mapped by the first end.
+  * The reference sequences mapped by the second end. 
 
+  <wiki:comment>
+  # Category. This is the flag defined by ABI, which is a three letter alphabet. 
+  # see [http://www3.appliedbiosystems.com/cms/groups/mcb_marketing/documents/generaldocuments/cms_058718.pdf Here 2.2.9 c] to get detail info.
+  </wiki:comment> 
 == Unmapped reads ==
 
 When the *-u* flag is specified, PerM will output the unmapped reads. The format is FASTA or FASTQ, depending on whether the quality score is available. I need to add the .csfasta format in the near future. Note the paired-end mapping result of the SAM format includes the mapped single-end. 
