--- a/wiki/Output.wiki
+++ b/wiki/Output.wiki
@@ -67,6 +67,7 @@ For Illumina reads with quality scores (FASTAQ file), Windows users can use the 
   * The position of the the 2nd read mapped to.
   * The foward (+) or backward (-)strand that the 1st read mapped to.
   * The foward (+) or backward (-)strand that the 2nd read mapped to.
+  * The # of qualified paired location that the paired reads mapped to.
 
 One can use option *--printRefSeq* to print out the mapped paired reference sequence for Illumina paired reads as the extra two columns.
   * The reference sequence mapped by the first end.
